[package]
name = "jsave"
description = "Persistent storage copy in JSON format for serializable in-memory data"
categories = ["database-implementations"]
keywords = ["database", "json", "serde"]
version = "0.1.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/jsave"

[dependencies]
parking_lot = { version = "0.12", features = ["send_guard"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0"
