[package]
name = "jsave"
description = "Persistent storage copy in JSON format for serializable in-memory data"
categories = ["database-implementations"]
keywords = ["database", "json", "serde"]
version = "0.1.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/jsave"

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
default = []
nightly = ["parking_lot/nightly", "serde/unstable"]
send_guard = ["parking_lot/send_guard"]
pretty = []
preserve_order = ["serde_json/preserve_order"]
float_roundtrip = ["serde_json/float_roundtrip"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
raw_value = ["serde_json/raw_value"]
unbounded_depth = ["serde_json/unbounded_depth"]
