[package]
name = "jsave"
description = "Persist serializable in-memory data in JSON format"
categories = ["database", "database-implementations"]
keywords = ["database", "json", "serde"]
version = "0.2.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2021"
rust-version = "1.59"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/jsave"

[dependencies]
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
pretty = []
send_guard = ["parking_lot/send_guard"]
preserve_order = ["serde_json/preserve_order"]
float_roundtrip = ["serde_json/float_roundtrip"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
unbounded_depth = ["serde_json/unbounded_depth"]

[package.metadata.docs.rs]
all-features = true
